# automation-platform

./: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: scripts.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: script.py
backend/app/services/: registry.py  runner.py
backend/app/storage/: state_store.py
script_specs/: hello_sleep.yaml
scripts/examples/: hello_sleep.py
test/: test.py  test1.py
自动ssh登录/: login_gui.py
自动连接openvpn/: 自动连接openvpn.py
